RESOLVED FIXED117938
Potential crash when in-band track is removed
https://bugs.webkit.org/show_bug.cgi?id=117938
Summary Potential crash when in-band track is removed
Eric Carlson
Reported 2013-06-24 09:18:07 PDT
InbandTextTrack::willRemoveTextTrackPrivate may be called after the owning HTMLMediaElement has been cleared because the media engine and the media element do not operate in sync. In this case, the media element has already dealt with the track removal so the notification from the media engine is not needed.
Attachments
Proposed patch (1.39 KB, patch)
2013-06-24 09:26 PDT, Eric Carlson
no flags
Radar WebKit Bug Importer
Comment 1 2013-06-24 09:23:49 PDT
Eric Carlson
Comment 2 2013-06-24 09:26:27 PDT
Created attachment 205302 [details] Proposed patch
Jer Noble
Comment 3 2013-06-24 09:36:45 PDT
Comment on attachment 205302 [details] Proposed patch Null checks ftw! r=me.
Eric Carlson
Comment 4 2013-06-24 10:13:10 PDT
Note You need to log in before you can comment on or make changes to this bug.