Potential crash when in-band track is removed https://bugs.webkit.org/show_bug.cgi?id=117938 <rdar://problem/14246763>

Reviewed by Jer Noble.

This is timing dependent and I was unable to come up with a reliable test.

* html/track/InbandTextTrack.cpp:
(WebCore::InbandTextTrack::willRemoveTextTrackPrivate): Early return if the media element
    has been cleared.


Canonical link: https://commits.webkit.org/136064@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151916 268f45cc-cd09-0410-ab3c-d52691b4dbfc